; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm_sparc.c___do_emit_one.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm_sparc.c___do_emit_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.func_info = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.func_info*, i32)* @__do_emit_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__do_emit_one(%struct.func_info* %0, i32 %1) #0 {
  %3 = alloca %struct.func_info*, align 8
  %4 = alloca i32, align 4
  store %struct.func_info* %0, %struct.func_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.func_info*, %struct.func_info** %3, align 8
  %7 = getelementptr inbounds %struct.func_info, %struct.func_info* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load %struct.func_info*, %struct.func_info** %3, align 8
  %10 = getelementptr inbounds %struct.func_info, %struct.func_info* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 8
  %13 = sext i32 %11 to i64
  %14 = getelementptr inbounds i32, i32* %8, i64 %13
  store i32 %5, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
